--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -7,6 +7,7 @@
         "editor.tabSize": 2,
         "editor.formatOnSave": true
     },
+    "elixirLS.dialyzerEnabled": false,
     "vim.leader": "<space>",
     "vim.normalModeKeyBindingsNonRecursive": [{
             "before": ["leader", "leader"],
