no confirm on DragAndDrop

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -47,5 +47,6 @@
             "commands": ["workbench.action.moveEditorToPreviousGroup"]
         }
     ],
+    "explorer.confirmDragAndDrop": false,
 }
 
