--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -14,6 +14,9 @@
         "editor.formatOnSave": false
     },
     "elixirLS.dialyzerEnabled": false,
+    "[yaml]": {
+        "editor.tabSize": 2
+    },
     "vim.leader": "<space>",
     "vim.normalModeKeyBindingsNonRecursive": [{
             "before": ["leader", "leader"],
