--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -11,6 +11,7 @@
 	default = current
 [alias]
 	ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
+	delete-merged-branch = "!f () { git checkout $1; git branch --merged|egrep -v '\\*|develop|main|unstable|staging|production|prod|release'|xargs git branch -d; };f"
 [pull]
 	rebase = false
 [init]
