--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -59,5 +59,6 @@
     ],
     "explorer.confirmDragAndDrop": false,
     "editor.bracketPairColorization.enabled": true,
+    "files.insertFinalNewline": true,
+    "files.trimFinalNewlines": true,
 }
-
