--- a/vim/.ideavimrc
+++ b/vim/.ideavimrc
@@ -5,4 +5,5 @@ sethandler <C-V> i:ide v:vim
 let mapleader = " "
 nnoremap <leader>l gt
 nnoremap <leader>h gT
+nnoremap <leader>q :q<CR>
 nnoremap <leader><leader> :action Run<CR>
